all-in-one-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - port: 8000 #My wish
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zone-printer-deployment
spec:
  selector:
    matchLabels:
      app: zone-printer
  template:
    metadata:
      labels:
        app: zone-printer
    spec:
      containers:
      - name: zone-printer
        image: gcr.io/google-samples/zone-printer:0.2
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: zone-printer-service
spec:
  type: ClusterIP
  selector:
    app: zone-printer
  ports:
  - port: 9000 #My wish
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-deployment
spec:
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.6
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: whereami-service
spec:
  type: ClusterIP
  selector:
    app: whereami
  ports:
  - port: 10000
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-ingress
spec:
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 8000
  rules:
  - http:
      paths:      
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-service
            port:
              number: 8000
      - path: /zone-printer
        pathType: ImplementationSpecific
        backend:
          service:
            name: zone-printer-service
            port:
              number: 9000
      - path: /whereami
        pathType: ImplementationSpecific
        backend:
          service:
            name: whereami-service
            port:
              number: 10000
